<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/activity_setting"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
android:weightSum="1">

<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioButton
        android:text="@string/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButtonBlue"
        android:onClick="buttonSetBlue"
        android:layout_weight="1" />

    <RadioButton
        android:text="@string/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButtonGreen"
        android:onClick="buttonSetGreen"
        android:layout_weight="1" />

    <RadioButton
        android:text="@string/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButtonRed"
        android:onClick="buttonSetRed"
        android:layout_weight="1" />

    <RadioButton
        android:text="@string/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButtonBlack"
        android:onClick="buttonSetBlack"
        android:layout_weight="1" />
</RadioGroup>

</LinearLayout>
