<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_title"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:text="@string/firstname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignBaseline="@+id/LastName"
        android:layout_alignBottom="@+id/LastName"
        android:layout_alignLeft="@+id/editFirstname"
        android:layout_alignStart="@+id/editFirstname"
        android:id="@+id/Firstname" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_title"
        android:textAlignment="viewStart"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="@dimen/activity_horizontal_margin_between"
        android:text="@string/lastname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignBaseline="@+id/LastName"
        android:layout_alignBottom="@+id/LastName"
        android:layout_alignLeft="@+id/editFirstname"
        android:layout_alignStart="@+id/editFirstname"
        android:id="@+id/Lastname" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/activity_horizontal_margin_between"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_title"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:layout_below="@+id/Lastname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/Phone"
        android:layout_above="@+id/editFirstname"
        android:layout_alignLeft="@+id/editFirstname"
        android:layout_alignStart="@+id/editFirstname" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/activity_horizontal_margin_between"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_title"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:layout_below="@+id/Lastname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/email"
        android:text="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/Email"
        android:layout_above="@+id/editFirstname"
        android:layout_alignLeft="@+id/editFirstname"
        android:layout_alignStart="@+id/editFirstname" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin_between"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_title"
        android:layout_below="@+id/Lastname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:text="@string/city" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/City"
        android:layout_above="@+id/editFirstname"
        android:layout_alignLeft="@+id/editFirstname"
        android:layout_alignStart="@+id/editFirstname" />

    <Button
        android:text="@string/button_send"
        android:onClick="addContactToDatabase"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</LinearLayout>